--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^1.2.0",
+    "laravel-echo": "^1.14.2",
+    "pusher-js": "^7.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "sass": "^1.56.1",
+    "socket.io-client": "^4.5.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
