--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^9.0.3",
     "redux": "^4.1.2",
     "sass": "^1.56.1",
     "web-vitals": "^1.1.2",
