--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^9.0.3",
     "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "sass": "^1.56.1",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
