--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.7.0",
     "react-toastify": "^9.0.3",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
