--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    // "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start": "react-scripts start",
+    // "build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
