--- a/package.json
+++ b/package.json
@@ -25,10 +25,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-   
-    "start": "react-scripts start",
-    
-     "build": "react-scripts build",
+    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
